test/invalid/open-row.js
var o = {bla: 1};
o.blo = 2;
o;
